# pb

./: .devcontainer.json  .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  QA_COMPLETION_REPORT.md  README.md  RELEASE_NOTES.md  SECURITY_AUDIT.md  cobertura.xml  demo.sh  test_chrono.rs  test_render.rs
.cargo/: config.toml
.github/: copilot-instructions.md
docs/: api_documentation.md  build_deployment.md  development_guide.md  github-actions.md  installation.md  performance_benchmarks.md  phase2_cli_implementation_report.md  phase2_error_handling_report.md  phase3_date_format_parsing_implementation_report.md  phase3_date_format_parsing_sow.md  phase3_datetime_format_parsing_implementation_report.md  phase3_datetime_format_parsing_sow.md  phase3_relative_time_parsing_implementation_report.md  phase3_relative_time_parsing_sow.md  phase4_color_management_implementation_report.md  phase4_color_management_sow.md  phase4_progress_bar_rendering_implementation_report.md  phase4_progress_bar_rendering_sow.md  phase4_progress_calculation_implementation_report.md  phase4_progress_calculation_sow.md  phase5_main_application_loop_implementation_report.md  phase5_main_application_loop_sow.md  phase6_comprehensive_testing_implementation_report.md  phase6_comprehensive_testing_sow.md  release-workflow-testing.md  specification.md  statement_of_work.md  technical_specification.md  troubleshooting.md  user_guide.md  validation_report.md
examples/: exact_reproduction.rs  test_verbose.rs
scripts/: build-native.sh  build.sh  dev.sh  performance_verify.sh  run.sh  target-info.sh  test-manual-dispatch.sh  test-release-with-tag.sh  test-release-workflow.sh  test.sh  validate-release-workflow.sh
src/: cli.rs  error.rs  lib.rs  main.rs  progress_bar.rs  time_parser.rs
tests/: cli_tests.rs  cli_tests_fixed.rs  cli_validation_integration_tests.rs  error_tests.rs  integration_tests.rs  interactive_mode_tests.rs  issue_fix_tests.rs  optional_start_time_tests.rs  performance_tests.rs  progress_tests.rs  time_parser_tests.rs  timezone_consistency_tests.rs  verbose_flag_tests.rs  verbose_layout_alignment_tests.rs
(+7 files in other folders)
