[package]
name = "pmon"
version = "2.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI progress monitor (pmon) for time-based visualization"
license = "MIT"
repository = "https://github.com/matsuokashuhei/pb"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
crossterm = "0.27"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "pmon"
path = "src/main.rs"
