[package]
name = "pmon"
version = "2.0.0"
edition = "2021"
authors = ["Shuhei Matsuoka <matsuokashuheiii@gmail.com>"]
description = "A CLI progress monitor (pmon) for time-based visualization"
license = "MIT"
repository = "https://github.com/matsuokashuhei/pmon"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
colored = "3.0.0"
crossterm = "0.29.0"
anyhow = "1.0.98"
thiserror = "2.0.12"
regex = "1.11.1"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "pmon"
path = "src/main.rs"
